# basa-sistema-operativo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  analisis_casos_de_uso.md  docker-compose.yml  especificaciones_interactivas_basa.md  especificaciones_skills_langchain.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: db.py  main.py  memory.py
app/api/: jefes.py  uc1_ubicacion.py  uc2_consulta_caja.py  uc3_consulta_legajos.py  uc4_retiros.py  uc5_busqueda.py
app/graphs/: operational_graph.py  query_graph.py
app/middleware/: auth.py  error_handler.py
app/models/: base.py  elemento.py  hoja_ruta.py  lectura.py  movimiento.py  posicion.py  referencia.py  requerimiento.py
app/nodes/: node_commercial_logic.py  node_persistence_unit.py  node_validator.py  state_preparer.py
app/services/: email_service.py
app/tools/: notebooklm_tool.py  postgres_readonly_tool.py  postgres_tool.py
docs/: DESCUBRIMIENTO-BASE-DE-DATOS.md  PENDIENTES-PARA-BASA.md
specs/001-sistema-operativo-basa/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sistema-operativo-basa/checklists/: requirements.md
specs/001-sistema-operativo-basa/contracts/: api-overview.md  uc1-ubicacion.md  uc2-consulta-caja.md  uc3-consulta-legajos.md  uc4-retiros.md  uc5-busqueda.md  uc6-consulta-jefes.md
